projcet ke 2 uas

--- a/app/src/main/res/layout/activity_editactivity.xml
+++ b/app/src/main/res/layout/activity_editactivity.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     tools:context="com.neesia.uasmobile.tambahactivity">
 
     <TextView
@@ -40,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
+        android:inputType="number"
         android:id="@+id/txttahunterbit">
     </EditText>
 
@@ -59,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SIMPAN"
+        android:background="@drawable/button"
         android:id="@+id/btnsimpan">
     </Button>
 
