--- a/app/src/main/res/layout/activity_datafilm.xml
+++ b/app/src/main/res/layout/activity_datafilm.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Daftar Buku" />
+        android:text="Daftar Film"/>
 
     <ListView
         android:id="@+id/ListView1"
@@ -21,7 +21,5 @@
         android:dividerHeight="2dp"
         android:layout_marginTop="25dp"
         android:divider="@android:color/black"/>
-
-
 
 </RelativeLayout>
