--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forget Password?"
+            android:text="Lupa Password?"
             android:textColor="#000000"
             android:fontFamily="sans-serif-medium"
             android:layout_gravity="right"
