--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -4,24 +4,119 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:background="#DDA0DD"
-    tools:context=".MainActivity"
-    android:padding="40dp"
-    >
-
-
-    <TextView
+    tools:context=".MainActivity">
+    
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        />
+        android:layout_height="405dp">
+        <LinearLayout
+            android:background="@drawable/gradientbackground"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_marginTop="15dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/sipp"
+                android:layout_gravity="center_horizontal">
+            </ImageView>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Neesia Syinandra"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:textSize="20sp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/txtusername"
-        />
+            </TextView>
+
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                android:textStyle="bold"
+                android:textSize="10sp">
+            </TextView>
+
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtusername">
+            </TextView>
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="175dp"
+            app:contentPaddingTop="15dp"
+            app:contentPaddingRight="15dp"
+            app:contentPaddingLeft="15dp"
+            app:contentPaddingBottom="15dp"
+            app:cardCornerRadius="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mahasiswi STIKI Indonesia"
+                    android:textSize="17sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center_horizontal">
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="NIM 1801313 dari kelas T Malam. Alamat email dan kontak saya, neesiasynandra@gmail.com , 085753631406 . Terimakasih dan selamat berteman :) "
+                    android:textAlignment="center"
+                    android:textStyle="italic"
+                    android:textSize="15sp"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center_horizontal">
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Denpasar, 24 Juni 2020"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center_horizontal">
+
+                </TextView>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+    </RelativeLayout>
+
+
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:src="@drawable/back"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/button"
+        android:id="@+id/btnkeluarprofil">
+    </ImageButton>
+
+
 
 </LinearLayout>
